--- a/AdditionalChallenge3/AdditionalChallenge3.vcxproj
+++ b/AdditionalChallenge3/AdditionalChallenge3.vcxproj
@@ -20,10 +20,9 @@
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
-    <ProjectGuid>{0C508AE3-1BCC-414A-B4F5-DBB0FD894937}</ProjectGuid>
-    <RootNamespace>Week1</RootNamespace>
+    <ProjectGuid>{B723A4E8-9571-4E76-80F2-7E7D7CBDAFB0}</ProjectGuid>
+    <RootNamespace>AdditionalChallenge3</RootNamespace>
     <WindowsTargetPlatformVersion>10.0.16299.0</WindowsTargetPlatformVersion>
-    <ProjectName>Collatz conjecture</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
