--- a/Additional Challenge 1/Additional Challenge 1.vcxproj
+++ b/Additional Challenge 1/Additional Challenge 1.vcxproj
@@ -20,10 +20,9 @@
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
-    <ProjectGuid>{0C508AE3-1BCC-414A-B4F5-DBB0FD894937}</ProjectGuid>
-    <RootNamespace>Week1</RootNamespace>
+    <ProjectGuid>{470D5503-97B2-45C5-B167-5071AE31AF59}</ProjectGuid>
+    <RootNamespace>AdditionalChallenge1</RootNamespace>
     <WindowsTargetPlatformVersion>10.0.16299.0</WindowsTargetPlatformVersion>
-    <ProjectName>Collatz conjecture</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
