--- a/AdditionalChallenge1/AdditionalChallenge1.vcxproj
+++ b/AdditionalChallenge1/AdditionalChallenge1.vcxproj
@@ -20,10 +20,9 @@
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
-    <ProjectGuid>{0C508AE3-1BCC-414A-B4F5-DBB0FD894937}</ProjectGuid>
-    <RootNamespace>Week1</RootNamespace>
+    <ProjectGuid>{2E1EF774-35E5-4673-BA4E-A5AD27AE2AC9}</ProjectGuid>
+    <RootNamespace>AdditionalChallenge1</RootNamespace>
     <WindowsTargetPlatformVersion>10.0.16299.0</WindowsTargetPlatformVersion>
-    <ProjectName>Collatz conjecture</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
